--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>parserVk</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>demo</name>
+    <name>parserVk</name>
 
 
     <properties>
@@ -38,7 +38,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.3</version>
                 <configuration>
-                    <mainClass>Main</mainClass>
+                    <mainClass>com.company.Main</mainClass>
                 </configuration>
             </plugin>
             <plugin>
